tests/cases/parser/literals/byte_literals/empty.stderr
error: empty character literal
 --> $DIR/empty.hash:3:3
2 |   
3 |   b'';
  |     ^ expected a character literal here
